--- a/Telecom_churn_Analysis_capstone_project.ipynb
+++ b/Telecom_churn_Analysis_capstone_project.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
-        "yQaldy8SH6Dl",
         "PH-0ReGfmX4f",
         "mDgbUHAGgjLW",
         "gCX9965dhzqZ",
@@ -84,7 +83,9 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "https://github.com/Satyabrata117/EDA-Telecom-Churn-Analysis-"
+      ],
       "metadata": {
         "id": "h1o69JH3Eqqn"
       }
